# splot

./: .gen_rcdb_table.py.swp  README.md  pyproject.toml
scripts/: demo  format  gen_rcdb_table.py
src/splot/: rcdb  splot.py
tests/: rfl.json  rfl_gaussian.json  test.root
