[project]
name = "splot"
version = "0.0.1"
description = "A script for adding sPlot/COWs weights to an AmpTools FlatTree"
dependencies = [
    'awkward>="1.8.0"',
    'iminuit>="2.11.2"',
    'matplotlib>="3.5.2"',
    'numexpr>="2.8.1"',
    'numpy>="1.22.4"',
    'scipy>="1.8.1"',
    'sweights>="0.0.5"',
    'uproot>="4.2.3"'
]

[project.scripts]
splot = "splot.splot:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.setuptools.packages.find]
where = ["src"]
